k8s/springboot-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: springboot-test
spec:
  rules:
  - host: springboot-test
    http:
      paths:
      - backend:
          service:
            name: springboot-test
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
